# selene-wallet

./: README.md  package.json  pnpm-lock.yaml  stats.html  vite.desktop.config.js
.github/workflows/: desktop-preview.yml  desktop-release.yml
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/icons/: icon.icns
src-tauri/src/: lib.rs  main.rs
src/platform/desktop/: app.ts  device.ts  encryption.ts  filesystem.ts  screen-brightness.ts
