[package]
name = "selene-wallet"
version = "0.0.0"
description = "Selene Wallet desktop app"
authors = []
license = ""
repository = ""
edition = "2021"

[lib]
name = "selene_wallet_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = [] }
tauri-plugin-opener = "2"
tauri-plugin-fs = "2"
tauri-plugin-keyring = "0.1"
tauri-plugin-biometry = "0.2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"


[profile.release]
panic = "abort"
codegen-units = 1
lto = true
opt-level = "s"
strip = true
